--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: <br> 
-#logo: ./graphicalabstract.png
+logo: ./thalamocortical_development.png
 description: <br>Project Information and Reproducibility Guide
 theme: jekyll-theme-minimal
