--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: <br> 
-logo: ./OverviewFigure.jpg
+logo: ./ProjectOverview.jpg
 description: <br>Project Information and Reproducibility Guide
 theme: jekyll-theme-minimal
